workspace/MJCompiler/test/syntaxerrors/formalparameters.mj
program formalparameters 
	int abc[], pq;
	int a;
	bool c;
{
	void fja (int a, int p q, bool c){
	
	}
	void main( int a c d ){
	
	}
	
}